--- a/web.html
+++ b/web.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div>
         <h1>Hola queridos estudiantes bienvenidos a este proyecto</h1>
+        <h2>Les recuerdo tomar el curso de Git y GitHub de Platzi</h2>
     </div>
 </body>
+
 </html>
